--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
     "react-multi-carousel": "^2.8.4",
+    "react-router-dom": "^6.22.3",
     "react-slideshow-image": "^4.3.1",
     "react-spring": "^9.7.3",
     "react-tilt": "^1.0.2"
