--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-animated-cursor": "^2.11.2",
     "react-axios": "^2.0.6",
+    "react-collapse": "^5.1.1",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
     "react-multi-carousel": "^2.8.4",
