--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-collapse": "^5.1.1",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
+    "react-modal": "^3.16.1",
     "react-multi-carousel": "^2.8.4",
     "react-router-dom": "^6.22.3",
     "react-slideshow-image": "^4.3.1",
